tests/specs/ecosystem/radix_ui_fork/react_slot/0_0_1.test
radix-ui-fork/react-slot/0.0.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:react@18.2.0": "npm:react@18.2.0"
    },
    "npm": {
      "js-tokens@4.0.0": {
        "integrity": "sha512-RdJUflcE3cUzKiMqQgsCu06FPu9UdIJO0beYbPhHN4k6apgJtifcoCtT9bcxOpYBtpD2kCM6Sbzg4CausW/PKQ==",
        "dependencies": {}
      },
      "loose-envify@1.4.0": {
        "integrity": "sha512-lyuxPGr/Wfhrlem2CL/UcnUc1zcqKAImBDzukY7Y5F/yQiNdko6+fRLevlw1HgMySw7f611UIY408EtxRSoK3Q==",
        "dependencies": {
          "js-tokens": "js-tokens@4.0.0"
        }
      },
      "react@18.2.0": {
        "integrity": "sha512-/3IjMdb2L9QbBdWiW5e3P2/npwMBaU9mHCSCUzNln0ZCYbcfTsGbTJrU/kGemdH2IWmB2ioZ+zkxtmq6g09fGQ==",
        "dependencies": {
          "loose-envify": "loose-envify@1.4.0"
        }
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
interface SlotProps extends React.HTMLAttributes<HTMLElement> {
                                                 ~~~~~~~~~~~
    at file://<tmpdir>/src/Slot.tsx:2:50

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
const Slot: React.ForwardRefExoticComponent<SlotProps & React.RefAttributes<HTMLElement>> = {} as never;
                                                                            ~~~~~~~~~~~
    at file://<tmpdir>/src/Slot.tsx:5:77

Found 2 errors.

